Fixed overflow behaviors

--- a/projects/projects.css
+++ b/projects/projects.css
@@ -65,7 +65,7 @@ nav {
   right: 15px;
   top: 20px;
   color: white;
-  font-size: clamp(2.5rem, 0.5rem + 5vw, 3rem);
+  font-size: clamp(1.5rem, 0.5rem + 2.5vw, 3rem);
   display: none;
 }
 
