--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,6 @@
   font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
-html,
 body {
   width: 100%;
   height: 100%;
@@ -28,7 +27,6 @@ nav {
   width: 100%;
   height: 10vh;
   position: sticky;
-  grid-row: 1 / 2;
 }
 
 .nav-container {
@@ -148,7 +146,6 @@ nav {
   color: white;
   width: 100%;
   min-height: 100px;
-  overflow-x: hidden;
 }
 
 .content {
@@ -158,7 +155,6 @@ nav {
   align-items: start;
   text-align: left;
   max-width: 100svh;
-  overflow-x: hidden;
 }
 
 .content .skill_icons {
@@ -194,6 +190,7 @@ nav {
   position: absolute;
   width: calc(100% + 8px);
   height: 100%;
+  width: auto;
   border-left: 1px solid black;
   right: -8;
   animation: cursor 1.25s infinite;
@@ -337,7 +334,7 @@ footer {
     justify-content: center;
     align-items: center;
     text-align: start;
-    padding: 0;
+    padding: 20px;
     margin: 0;
   }
 
